--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     padding-top: 70px;
-    font: 20px Montserrat, sans-serif;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font-size: 20px;
     line-height: 1.8;
 }
 p {
@@ -26,7 +27,8 @@ h3 {
     line-height: 26px;
 }
 h4 {
-    font: 16px Montserrat, sans-serif;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font-size: 16px;
     padding-right: 10%;
     padding-left: 10%;
 }
